--- a/Etrafe3ly/src/pages/lawyer-sign-up/lawyer-sign-up.html
+++ b/Etrafe3ly/src/pages/lawyer-sign-up/lawyer-sign-up.html
@@ -142,7 +142,7 @@ in case of the user account type it will be without the lawyers info -->
 <!-- if the data is complete and valid then it will register the user then login -->
 <!-- if the data is not complete it will show alert missing data -->
       <div style="text-align:center; margin-top:5%; margin-bottom:5%;">
-        <button (click)="registerLawyer()" style="width:50%;" ion-button>Sign up</button>
+        <button (click)="Register(newLawyer)" style="width:50%;" ion-button>Sign up</button>
       </div>
 <!-- end of sign up page -->
  </ion-content>
