profile and edit profile pages
created profile page and edit profile page

--- a/Etrafe3ly/src/pages/home/home.html
+++ b/Etrafe3ly/src/pages/home/home.html
@@ -9,4 +9,5 @@
 
 <ion-content padding>
   <h3 style="text-align:center;">Top rated lawyers</h3>
+  <button ion-button (click)='goToProfile()'>profile</button>
 </ion-content>
