finishing the profile page

--- a/Etrafe3ly/src/pages/lawyer-profile/lawyer-profile.html
+++ b/Etrafe3ly/src/pages/lawyer-profile/lawyer-profile.html
@@ -28,4 +28,24 @@
 <div style="font-size:20px; margin-top: 35%;">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
 
+   <!-- hour rate -->
+   <div>
+     <div style="display:inline-block; font-size: 18px; font-weight: bold; margin-top: 5%;">Hour rate: </div>
+     <!-- this div will get the hour rate attribute -->
+     <div style="display:inline-block; color:green; font-size: 20px;">	&nbsp;20 $</div>
+   </div>
+
+   <!-- address -->
+   <div style="font-size: 18px; font-weight: bold; margin-top: 5%;">
+     Address: here you will show the address
+   </div>
+
+   <!-- phone number -->
+   <div style="font-size: 18px; font-weight: bold; margin-top: 5%;">
+     Phone number: here you will show the lawyers phone number
+   </div>
+
+   <!-- rating -->
+   <div style="font-size: 18px; font-weight: bold; margin-top: 5%; text-align: center;">Rating</div>
+   <div style="font-size: 18px; margin-top: 3%; text-align: center">here you should show the rating</div>
 </ion-content>
