--- a/Etrafe3ly/src/pages/home/home.html
+++ b/Etrafe3ly/src/pages/home/home.html
@@ -10,4 +10,5 @@
 <ion-content padding>
   <h3 style="text-align:center;">Top rated lawyers</h3>
   <button ion-button (click)='goToProfile()'>profile</button>
+  <button ion-button (click)='logoutUser()'>Logout</button>
 </ion-content>
