changes in home

--- a/Etrafe3ly/src/pages/home/home.html
+++ b/Etrafe3ly/src/pages/home/home.html
@@ -9,6 +9,6 @@
 
 <ion-content padding>
   <h3 style="text-align:center;">Top rated lawyers</h3>
-  <button ion-button *ngIf="" (click)='goToProfile()'>profile</button>
-  <button ion-button (click)='logoutUser()'>Logout</button>
+  <button ion-button *ngIf="this.loggedIn" (click)='goToProfile()'>profile</button>
+  <button ion-button *ngIf="this.loggedIn" (click)='logoutUser()'>Logout</button>
 </ion-content>
