--- a/Etrafe3ly/src/pages/lawyer-profile/lawyer-profile.html
+++ b/Etrafe3ly/src/pages/lawyer-profile/lawyer-profile.html
@@ -23,7 +23,7 @@
 <img src="../../assets/imgs/user.png" class="profilePhoto">
 
 <!-- first + last name div using attribute binding-->
-<div class="name"> Alaa Ahmed amin</div> </div>
+<div class="name"> {{this.navParams.data.email}}</div> </div>
 <!-- Bio div -->
 <div style="font-size:20px; margin-top: 35%;">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
