profile and edit profile pages of users

--- a/Etrafe3ly/src/pages/home/home.html
+++ b/Etrafe3ly/src/pages/home/home.html
@@ -11,4 +11,5 @@
   <h3 style="text-align:center;">Top rated lawyers</h3>
   <button ion-button *ngIf="this.loggedIn" (click)='goToProfile()'>profile</button>
   <button ion-button *ngIf="this.loggedIn" (click)='logoutUser()'>Logout</button>
+  <button ion-button *ngIf="this.loggedIn" (click)='goToUserProfile()'></button>
 </ion-content>
