changes in login
login used with firebase,
created local variable

--- a/Etrafe3ly/src/pages/home/home.html
+++ b/Etrafe3ly/src/pages/home/home.html
@@ -9,7 +9,8 @@
 
 <ion-content padding>
   <h3 style="text-align:center;">Top rated lawyers</h3>
-  <button ion-button *ngIf="this.loggedIn" (click)='goToProfile()'>profile</button>
-  <button ion-button *ngIf="this.loggedIn" (click)='logoutUser()'>Logout</button>
-  <button ion-button *ngIf="this.loggedIn" (click)='goToUserProfile()'>user Profile</button>
+  <button ion-button (click)='goToProfile()'>profile</button>
+  <button ion-button (click)='logout()'>Logout</button>
+  <button ion-button (click)='console.log(this.userData)'>user Profile</button>
+  
 </ion-content>
