--- a/Etrafe3ly/src/pages/login/login.html
+++ b/Etrafe3ly/src/pages/login/login.html
@@ -42,7 +42,7 @@
 <!-- the log in button should check if the e-mail and password are correct -->
 <!-- if they are correct he should login and transfer him to the home page -->
 <!-- if they are not correct it should show an alert saying e-mail or password are incorrect -->
-        <button style="width:50%;" ion-button (click)='login(userInfo)'>login</button>
+        <button style="width:50%;" ion-button (click)='login()'>login</button>
 <!-- end of login button -->
 
 <!-- forgot password button -->
