categories retrieval page
added a page to show lawyers according to categories

--- a/Etrafe3ly/src/pages/home/home.html
+++ b/Etrafe3ly/src/pages/home/home.html
@@ -12,5 +12,6 @@
   <button ion-button (click)='goToProfile()'>profile</button>
   <button ion-button (click)='logout()'>Logout</button>
   <button ion-button (click)='console.log(this.userData)'>user Profile</button>
+  <button ion-button (click)='goToCat()'>cat</button>
   
 </ion-content>
