fixing a bug in categories

--- a/Etrafe3ly/src/pages/categories-retrieval/categories-retrieval.html
+++ b/Etrafe3ly/src/pages/categories-retrieval/categories-retrieval.html
@@ -27,7 +27,7 @@
         </ion-card-header>
         <!-- lawyer bio -->
         <ion-card-content>
-          here you will retrieve the bio the lawyer wrote
+          {{lawyer.bio}}
         </ion-card-content>
       </ion-card>
     <!-- end of the ion card  -->
