fixing a bug again

--- a/Etrafe3ly/src/pages/categories-retrieval/categories-retrieval.html
+++ b/Etrafe3ly/src/pages/categories-retrieval/categories-retrieval.html
@@ -23,7 +23,7 @@
               <!-- here you will display lawyer's name -->
               <h2 class="lawyerName">{{lawyer.firstName}}</h2>
               <!-- lawyer rate -->
-              <h2 class="lawyerRate">{{lawyer.phone}} <ion-icon name="ios-star" color="gold"></ion-icon></h2>
+              <h2 class="lawyerRate">{{lawyer.overallRate}} <ion-icon name="ios-star" color="gold"></ion-icon></h2>
         </ion-card-header>
         <!-- lawyer bio -->
         <ion-card-content>
