login not working properly
login for user and for lawyer not working wogether but working standalone

--- a/Etrafe3ly/src/pages/user-profile-pages-folder/user-profile/user-profile.html
+++ b/Etrafe3ly/src/pages/user-profile-pages-folder/user-profile/user-profile.html
@@ -22,7 +22,7 @@
     <img src="../../assets/imgs/user.png" class="profilePhoto">
     
     <!-- first + last name div using attribute binding-->
-    <div class="name"> Alaa Ahmed amin</div>
+    <div class="name"> Hello , {{this.navParams.data.firstName}}</div>
     </div>
 
        <!-- phone number -->
