--- a/Etrafe3ly/src/pages/user-profile-pages-folder/user-profile/user-profile.html
+++ b/Etrafe3ly/src/pages/user-profile-pages-folder/user-profile/user-profile.html
@@ -27,9 +27,8 @@
 
        <!-- phone number -->
    <div style="font-size: 18px; font-weight: bold; margin-top: 35%; color: green;">
-    Phone number: here you will show the user's phone number
+    Phone number: {{this.navParams.data.phone}}
   </div>
 
-  <div style="font-size: 18px; font-weight: bold; margin-top: 5%;">National ID: her you will show the national id</div>
-  <div style="font-size: 18px; font-weight: bold; margin-top: 5%;">E-mail: here you will show the e-mail</div>
+  <div style="font-size: 18px; font-weight: bold; margin-top: 5%;">National ID: {{this.navParams.data.nationalID}}</div>
 </ion-content>
