--- a/Etrafe3ly/src/pages/lawyer-profile/lawyer-profile.html
+++ b/Etrafe3ly/src/pages/lawyer-profile/lawyer-profile.html
@@ -9,7 +9,9 @@
     <ion-navbar color="ourColor">
     <ion-title>Profile</ion-title>
   </ion-navbar>
-
+  <button ion-button end (click)='deleteAcc(this.navParams.data.uid)'>
+    Delete Account
+  </button>
 </ion-header>
 
 
