--- a/Etrafe3ly/src/pages/user-profile-pages-folder/user-profile/user-profile.html
+++ b/Etrafe3ly/src/pages/user-profile-pages-folder/user-profile/user-profile.html
@@ -12,6 +12,9 @@
       </button>
   <ion-title>Profile</ion-title>
 </ion-navbar>
+<button ion-button end (click)='deleteAcc(this.navParams.data.uid)'>
+    Delete Account
+</button>
 
 </ion-header>
 
