--- a/Etrafe3ly/src/pages/categories-retrieval/categories-retrieval.html
+++ b/Etrafe3ly/src/pages/categories-retrieval/categories-retrieval.html
@@ -10,6 +10,7 @@
         <button ion-button menuToggle>
           <ion-icon name="menu"></ion-icon>
         </button>
+        <ion-icon ion-button name="search" item right></ion-icon>
         <ion-title>Etrafe3ly</ion-title>
       </ion-navbar>
 </ion-header>
