--- a/Etrafe3ly/src/pages/lawyer-sign-up/lawyer-sign-up.html
+++ b/Etrafe3ly/src/pages/lawyer-sign-up/lawyer-sign-up.html
@@ -102,6 +102,14 @@
                         <ion-checkbox color="dark" checked="true"></ion-checkbox>
                       </ion-item>
 
+                  <!-- image -->
+                    <ion-item>
+                      <ion-row>
+                        <ion-col col-6>
+                          <button block ion-button (click)="openGallery()"> Upload photo </button>
+                        </ion-col>
+                      </ion-row>
+                    </ion-item>
 <!-- end of the normal user input fields -->
 
 <!-- start of the fields required from the lawyer when he choose tha lawyer account type -->
