commented some code and added searchModal

--- a/Etrafe3ly/src/pages/categories-retrieval/categories-retrieval.html
+++ b/Etrafe3ly/src/pages/categories-retrieval/categories-retrieval.html
@@ -10,7 +10,6 @@
         <button ion-button menuToggle>
           <ion-icon name="menu"></ion-icon>
         </button>
-        <ion-icon ion-button name="search" item right></ion-icon>
         <ion-title>Etrafe3ly</ion-title>
       </ion-navbar>
 </ion-header>
@@ -22,7 +21,7 @@
         <ion-card-header>
                 <img class="lawyerPhoto" src="../../assets/imgs/lawyer.png">
               <!-- here you will display lawyer's name -->
-              <h2 class="lawyerName">{{lawyer.firstName}}</h2>
+              <h2 class="lawyerName">hello</h2>
               <!-- lawyer rate -->
               <h2 class="lawyerRate">{{lawyer.overallRate}} <ion-icon name="ios-star" color="gold"></ion-icon></h2>
         </ion-card-header>
