--- a/Etrafe3ly/src/pages/home/home.html
+++ b/Etrafe3ly/src/pages/home/home.html
@@ -3,7 +3,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Etrafe3ly</ion-title>
+    <ion-title>Etrafe3ly <ion-icon (click)="presentModal()" name="search" float-right></ion-icon></ion-title>
   </ion-navbar>
 </ion-header>
 
