--- a/Etrafe3ly/src/pages/home/home.html
+++ b/Etrafe3ly/src/pages/home/home.html
@@ -9,10 +9,10 @@
 
 <ion-content padding>
   <h3 style="text-align:center;">Top rated lawyers</h3>
-  <button ion-button (click)='logout()'>Logout</button>
-  <button ion-button (click)='goToUserProfile()'>user Profile</button>
+  <button ion-button *ngIf="this.userDataObj.isLoggedIn" (click)='logout()'>Logout</button>
+  <button ion-button *ngIf="this.userDataObj.isLoggedIn" (click)='goToProfile()'>Lawyer Profile</button>
   <button ion-button (click)='goToCat()'>cat</button>
-  <button ion-button (click)='goToUserProfile()'>user Profile</button>
+  <button ion-button *ngIf="this.userDataObj.isLoggedIn" (click)='goToUserProfile()'>user Profile</button>
 
   
 </ion-content>
