--- a/Etrafe3ly/src/pages/home/home.html
+++ b/Etrafe3ly/src/pages/home/home.html
@@ -3,8 +3,12 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Etrafe3ly <ion-icon (click)="presentModal()" name="search" float-right></ion-icon></ion-title>
+    <ion-title>Etrafe3ly </ion-title>
+    <ion-buttons start>
+    <button ion-button icon-only (click)="presentModal()"><ion-icon name="search"></ion-icon> </button>
+    </ion-buttons>
   </ion-navbar>
+  
 </ion-header>
 
 <ion-content padding>
