--- a/Etrafe3ly/src/pages/user-profile-pages-folder/edit-user-profile/edit-user-profile.html
+++ b/Etrafe3ly/src/pages/user-profile-pages-folder/edit-user-profile/edit-user-profile.html
@@ -95,7 +95,7 @@
     <!-- if the data is complete and valid then it will register the user then login -->
     <!-- if the data is not complete it will show alert missing data -->
           <div style="text-align:center; margin-top:5%; margin-bottom:5%;">
-            <button style="width:50%;" ion-button (click) = 'updateInfo()'>Update</button>
+            <button style="width:50%;" ion-button (click)='updateInfoToDB()'>Update</button>
           </div>
 </ion-list>
 </ion-content>
