--- a/Etrafe3ly/src/pages/user-sign-up/user-sign-up.html
+++ b/Etrafe3ly/src/pages/user-sign-up/user-sign-up.html
@@ -102,6 +102,6 @@
 <!-- if the data is complete and valid then it will register the user then login -->
 <!-- if the data is not complete it will show alert missing data -->
 <div style="text-align:center; margin-top:5%; margin-bottom:5%;">
-  <button (click)="userRegistration()" style="width:50%;" ion-button>Sign up</button>
+  <button (click)="Register()" style="width:50%;" ion-button>Sign up</button>
 </div>
 </ion-content>
