before trying rate

--- a/Etrafe3ly/src/pages/lawyer-profile/lawyer-profile.html
+++ b/Etrafe3ly/src/pages/lawyer-profile/lawyer-profile.html
@@ -53,5 +53,5 @@
   <button ion-button end *ngIf="this.userDataObj.userType == 'Users'">
       Rate
   </button>
-  <!--<star-rating *ngIf="this.this.userDataObj.userType == 'Users'"></star-rating><!--add rate conditionn-->
+  <star-rating *ngIf="this.userDataObj.userType == 'Users'"></star-rating><!--add rate conditionn-->
 </ion-content>
