image upload working now

--- a/Etrafe3ly/src/pages/categories-retrieval/categories-retrieval.html
+++ b/Etrafe3ly/src/pages/categories-retrieval/categories-retrieval.html
@@ -23,12 +23,13 @@
               <!-- here you will display lawyer's name -->
               <h2 class="lawyerName">{{lawyer.firstName}} {{lawyer.lastName}}</h2>
               <!-- lawyer rate -->
-              <h2 class="lawyerRate"><!--ovaerAll rate-->
+              <h2 class="lawyerRate"><!--overAll rate-->
                 <!--
                   <ion-icon name="ios-star" color="gold"></ion-icon>
                   loop to get rate
 
                 -->
+                
               </h2>
         </ion-card-header>
         <!-- lawyer bio -->
