--- a/Etrafe3ly/src/pages/search-modal/search-modal.html
+++ b/Etrafe3ly/src/pages/search-modal/search-modal.html
@@ -24,6 +24,8 @@
           <h2>{{lawyer.firstName }}</h2>
           <h3>{{lawyer.lastName}}</h3>
           <p>{{lawyer.bio}}</p>
+          <label>{{lawyer.avgRate}}</label>
+          
         </ion-card>
       </ion-item>
     </ion-list>
