--- a/Etrafe3ly/src/pages/editlawyer-profile/editlawyer-profile.html
+++ b/Etrafe3ly/src/pages/editlawyer-profile/editlawyer-profile.html
@@ -125,7 +125,7 @@
   in case of the user account type it will be without the lawyers info -->
   <!-- if the data is complete and valid then it will register the user then login -->
   <!-- if the data is not complete it will show alert missing data -->
-        <button ion-button (click)='uploadPic()'>Upload picture</button>
+        <button ion-button (click)='selectPic()'>Upload picture</button>
     
         <div style="text-align:center; margin-top:5%; margin-bottom:5%;">
           <button style="width:50%;" ion-button (click)='updateInfoToDB()'>Update</button>
