--- a/Etrafe3ly/src/pages/lawyer-sign-up/lawyer-sign-up.html
+++ b/Etrafe3ly/src/pages/lawyer-sign-up/lawyer-sign-up.html
@@ -106,7 +106,7 @@
                     <ion-item>
                       <ion-row>
                         <ion-col col-6>
-                          <button block ion-button (click)="openGallery()"> Upload photo </button>
+                          <button style="width:50%;" (click)='getPic()' ion-button block>Upload Picture</button>
                         </ion-col>
                       </ion-row>
                     </ion-item>
@@ -147,7 +147,6 @@
 <!-- sign up button -->
 <!-- this button will check if all the fields are complete
 in case of the user account type it will be without the lawyers info -->
-<button style="width:50%;" (click)='getPic()' ion-button>Upload Picture</button>
 <!-- if the data is complete and valid then it will register the user then login -->
 <!-- if the data is not complete it will show alert missing data -->
       <div style="text-align:center; margin-top:5%; margin-bottom:5%;">
