--- a/Etrafe3ly/src/pages/lawyer-profile/lawyer-profile.html
+++ b/Etrafe3ly/src/pages/lawyer-profile/lawyer-profile.html
@@ -49,8 +49,6 @@
   </button>
   <button ion-button end *ngIf="this.userDataObj.userType == 'Users'">
       book
-  </button>
-
-  
-  <star-rating *ngIf="check()"></star-rating><!--add rate conditionn-->
+  </button> 
+  <star-rating></star-rating><!--add rate conditionn-->
 </ion-content>
